Fix images in instagram sticking out

--- a/src/router/Instagram.css
+++ b/src/router/Instagram.css
@@ -14,6 +14,7 @@
     padding-bottom: calc((100% - 30px) / 3);
     margin-bottom: 10px;
     background: #000;
+    overflow: hidden;
 }
 
 #inList > a:not(:nth-child(3n)) {
